# SibSutis

./: README.md
10_semester/information_theory/: .gitignore  file_3.txt  kr1.py  requirements.txt
10_semester/ml_methods/: data.csv  main.py  requirements.txt
10_semester/modern_prog_tech/: .gitignore  calculator.ui  calculator_controller.py  calculator_controller_test.py  calculator_design.py  fraction.py  fraction_test.py  main.py  rgr_calculator_design.py
10_semester/network_databases/: my_cre_tab.sql  my_drop_tab.SQL  my_ins_tab.SQL  rgr_cre_tab.sql  rgr_drop_tab.sql  rgr_ins_tab.sql
10_semester/practice/: gymnasium.py  institution.py  lyceum.py  main.py  school.py
10_semester/system_software/: fork.c  fork_2.c  http.cpp  index.html  ticker_client.c  ticker_server.c
5_semester/Arch/kurs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
5_semester/Arch/kurs/include/: alu.h  bc.h  gui.h  rk.h  sc.h
5_semester/Arch/kurs/src/: alu.c  bc.c  gui.c  main.c  mt.c  rk.c  sc.c
5_semester/CompMath/: course.py  lab1.py  lab2.py  lab3.py  lab4.py  lab5.py  my_error.py
6_semester/Arch/: course.py
6_semester/VisProg/: Lab3.py  old.py
6_semester/practice/: main.go
7_semester/complexityOfCompProcesses/: backpack.py  dijkstra.py  floyd.py  ford.py  graph.py  kruskal.py  mergesort.py  parentheses.py
7_semester/computationalOptimizationMethods/: course.py  lab1.py  lab2.py  lab3.py
9_semester/presentGraphInfo/: .gitignore  Carib256.pcx  lab1-2.py  lab3.py  shm_lab1-2.py
9_semester/theoryOfPL/: _dummy.py  _machine.txt  course.py  lab1.py  (+2 more)
(+133 files in other folders)
