cmake_minimum_required( VERSION 2.6 )
set( BIN ./bin/kurs )
project( kurs )
set( SOURCE_ROOT ./src )
aux_source_directory( ${SOURCE_ROOT} SOURCES )
include_directories( ./headers )
set( REQUIRED_LIBRARIES)
add_executable( ${BIN} ${SOURCES} )
target_link_libraries( ${BIN} ${REQUIRED_LIBRARIES} )
set( CMAKE_BUILD_TYPE "Debug" )
